--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-index.html
 <!DOCTYPE html>
  <head>
    <title>Module 2 assignment</title>
@@ -7,4 +6,29 @@ index.html
  
  <body>
  	
- </body>  	
+ </body>  	 </body>  	<html>
+
+  <head>
+    <meta charset="utf-8">
+    <title>Module 2 assignment</title>
+    <link rel="stylesheet" href='style.css'>
+  </head>
+
+  <body>
+    <h1>Just some cool quotes</h1>
+    <div id="yoda">
+      <h2>YODA</h2>
+      <p>"Do or do not, there is no try."</p>
+    </div>
+    <div id='vader'>
+      <h2>VADER</h2>
+      <p>"You dont know the power of the dark side."</p>
+    </div>
+    <div id='obi-wan'>
+      <h2>OBI-WAN</h2>
+      <p>“If you strike me down, I shall become more powerful than you can possibly imagine.”"</p>
+    </div>
+
+  </body>
+
+</html>
