--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html>
+
   <head>
     <meta charset="utf-8">
     <title>Module 2 assignment</title>
@@ -7,17 +9,19 @@
 
   <body>
     <h1>Just some cool quotes</h1>
-    <div id="yoda">
-      <h2>YODA</h2>
-      <p>"Do or do not, there is no try."</p>
-    </div>
-    <div id='vader'>
-      <h2>VADER</h2>
-      <p>"You dont know the power of the dark side."</p>
-    </div>
-    <div id='obi-wan'>
-      <h2>OBI-WAN</h2>
-      <p>“If you strike me down, I shall become more powerful than you can possibly imagine.”"</p>
+    <div id='div1'>
+      <div id='yoda' class='columns'>
+        <h2>YODA</h2>
+         <p>"Do or do not, there is no try."</p>
+      </div>
+      <div id='vader' class='columns'>
+        <h2>VADER</h2>
+        <p>"You dont know the power of the dark side."</p>
+      </div>
+      <div id='obi-wan' class='columns'>
+          <h2>OBI-WAN</h2>
+      <p>“If you strike me down, I shall become more powerful than you can possibly imagine.”</p>
+      </div>
     </div>
 
   </body>
